[tool.poetry]
name = "technical-test-data-engineer"
version = "0.1.0"
description = ""
authors = ["Vasken Dermardiros <vdermardiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.0.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
fastapi-pagination = "^0.12.32"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
